2002-10-04  Christian Mertes <c_mertes@bigfoot.de>

		- Updated version to 0.2.0
		- Changed download location to sourceforge
		- removed USEGCC2.
		- added MD5 and LICENSE.
		- added MAINTAINER field.