@@ -8,7 +8,7 @@ SOURCE_DIRECTORY=$BUILD_DIRECTORY/$SPELL-$VERSION
          LICENSE=GPL
 	  MAINTAINER=c_mertes@bigfoot.de
          ENTERED=20020129
-         UPDATED=20021126
+         UPDATED=20030128
            SHORT='Keeps record of highest uptimes'
 cat << EOF
 uptimed is an uptime record daemon keeping track of the highest uptimes
