@@ -1,3 +1,8 @@
+2003-01-28	Jeff Schmidt <jschmidt@fnal.gov>
+
+		added better init script (thanks, Arwed v. Merkatz)
+
+
 2002-10-04  Christian Mertes <c_mertes@bigfoot.de>
 
 		- Updated version to 0.2.0
